--- a/slide_bug_fix_demo/resources/css/style.scss
+++ b/slide_bug_fix_demo/resources/css/style.scss
@@ -2464,6 +2464,11 @@ body {
             }
             // & + .swiper-slide {
             @include each(margin-right, 30px, 15px);
+
+            &:last-child {
+                margin-right: 200px;
+            }
+
             // }
             img {
                 @include each(width, 538px, 270px);
